[gd_scene load_steps=3 format=3 uid="uid://c8uyxnl6odljr"]

[ext_resource type="Script" path="res://scenes/map_gen/map_gen.gd" id="1_2it1h"]
[ext_resource type="Script" path="res://scenes/camera_2d.gd" id="2_rotab"]

[node name="MapGen" type="Node2D"]
script = ExtResource("1_2it1h")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, 300)
current = true
script = ExtResource("2_rotab")

[node name="TileContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TileInfo" type="Panel" parent="UI"]
visible = false
anchor_right = 0.2
anchor_bottom = 0.1
offset_right = 40.0
offset_bottom = 40.0

[node name="BiomeLabel" type="Label" parent="UI/TileInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Biome: None"

[node name="CoordLabel" type="Label" parent="UI/TileInfo"]
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 47.0
text = "Coord: 0,0"
